Small focus tree changes and fixed the on_action

--- a/localisation/events_l_english.yml
+++ b/localisation/events_l_english.yml
@@ -3705,7 +3705,7 @@
  news.343.a:0 "What's gotten into you, South America?"
  news.343.b:0 "It's time we get back our lost lands!"
  news.343.c:0 "These war mongerers will lose just like the first time! VIVA CHILE!"
- news.343.d:0 "We need to help our Chilean brothers! These warmongerers need to be stopped!"
+ news.343.e:0 "We need to help our Chilean brothers! These warmongerers need to be stopped!"
 
  news.344.t:0 "Ecuador and Bolivia Have Joined the Second War of the Pacific"
  news.344.d:0 "News quickly spread of Colombian and Ecuadorian forces crossing the Peruvian border and officially joining Chile on their side of the war. \n\nThe world stands in shock as they see what was once considered a relatively calm continent spiral out of control. \n\nFor now, we just have to wait and see how this all plays out."
