--- a/localisation/focus_filter_tag_l_english.yml
+++ b/localisation/focus_filter_tag_l_english.yml
@@ -21,3 +21,4 @@
  FOCUS_FILTER_TUR_KEMALISM:0 "Kemalism"
  FOCUS_FILTER_TUR_TRADITIONALISM:0 "Traditionalism"
  FOCUS_FILTER_SECOND_WAR_OF_THE_PACIFIC:0 "Second War of the Pacific"
+ FOCUS_FILTER_ARMY_NAVY_RIVALRY:0 "Army-Navy Rivalry"
