--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2585,6 +2585,7 @@
  MTG_naval_treaty_adherent_reduced:0 "Escalator Clause Invoked"
  MTG_naval_treaty_adherent_reduced_desc:0 "After some signatories of the Washington Naval Treaty have abandoned the London Naval Treaty, we have invoked the Escalator Clause, reducing the restrictions for the size and armament of our capital ships."
  GER_air_safety_regulations:0 "Air Safety Regulations"
+ ARG_air_safety_regulations:0 "Air Safety Regulations"
  GER_hans_oster:0 "Hans Oster"
  GER_alfred_hugenberg:0 "Alfred Hugenberg"
  GER_carl_friedrich_goerdeler:0 "Carl Friedrich Goerdeler"
@@ -3118,6 +3119,8 @@
  BOL_army_go_through_reform_tt:0 "§RYour Army will go through a rather lengthy reformation process, and only when it's finished reforming will you be able to complete the other focuses§!"
  BOL_toro_take_longer_tt:0 "Toro will take §G5§! days longer to §Ytake control over a state§!"
  is_in_second_war_of_confederation:0 "Is in the Second War of the Confederation"
+ ARG_mobilize_elite:0 "£army_experience  §Y10§!"
+ ARG_mobilize_elite_blocked:0 "£army_experience §R10§!"
  SAU_cost_15_command:0 "£pol_power  §Y25§! £command_power  §Y15§!"
  SAU_cost_15_command_blocked:0 "£pol_power  §R25§! £command_power  §R15§!"
  SAU_cost_25_command:0 "£pol_power  §Y50§! £command_power  §Y25§! £army_experience §Y5§!"
