--- a/localisation/ideas_l_spanish.yml
+++ b/localisation/ideas_l_spanish.yml
@@ -1649,6 +1649,8 @@
  CHL_FAMAE_desc:0 "FAMAE (Fábricas y Maestranzas del Ejército de Chile) es una institución pública dedicada a la fabricación de armas para el Ejército de Chile. Desde 1811 es considerada la más antigua de América, FAMAE ha contribuido al desarrollo industrial de Chile, caracterizándose por la garantía de sus productos, los cuales han sido exportado también a otros países."
  PRU_social_democracy_idea:0 "Democracia Social"
  is_in_second_war_of_confederation:0 "Está en la segunda guerra de la Confederación"
+ ARG_mobilize_elite:0 "£command_power  §Y10§! £army_experience §Y10§!"
+ ARG_mobilize_elite_blocked:0 "£command_power  §R10§! £army_experience §R10§!"
  SAU_cost_15_command:0 "£pol_power §Y25§! £command_power §Y15§!"
  SAU_cost_15_command_blocked:0 "£pol_power §R25§! £command_power §R15§!"
  SAU_cost_25_command:0 "£pol_power §Y50§! £command_power §Y25§! £army_experience §Y5§!"
@@ -2896,6 +2898,7 @@
  MTG_naval_treaty_adherent_reduced:0 "Apelación a la cláusula de ajuste"
  MTG_naval_treaty_adherent_reduced_desc:0 "Como varios firmantes del Tratado Naval de Washington han abandonado el Tratado Naval de Londres, hemos apelado a la cláusula de ajuste que reduce el límite de tamaño y armamento de los buques capitales."
  GER_air_safety_regulations:0 "Normativa de seguridad en el aire"
+ ARG_air_safety_regulations:0 "Normativa de seguridad en el aire"
  GER_hans_oster:0 "Hans Oster"
  GER_alfred_hugenberg:0 "Alfred Hugenberg"
  GER_carl_friedrich_goerdeler:0 "Carl Friedrich Goerdeler"
