--- a/localisation/effects_l_spanish.yml
+++ b/localisation/effects_l_spanish.yml
@@ -113,6 +113,8 @@
  
 
  PRU_high_opinion_factories:0 "Por cada §Ypaís vecino§! que tiene una §Gmuy buena opinion§! de vos, obtendras §G2§! §Yfabricas civiles§!."
+ PRU_stabilized_army_navy:0 "\n   El §YEjército§! y la §YArmada§! no estan en un estado de §Rrivalidad§!"
+
 
  EFFECT_LIST_OTHERS:0 "$LIST$ y $NUMBER|Y$ otros"
  EFFECT_LIST_COUNTRY:1 "@$TAG$$COUNTRY|UH$"
