--- a/localisation/events_l_spanish.yml
+++ b/localisation/events_l_spanish.yml
@@ -3718,7 +3718,7 @@
  news.343.a:0 "¿Qué te pasa, Sudamérica?"
  news.343.b:0 "¡Es hora de recuperar nuestras tierras perdidas!"
  news.343.c:0 "¡Estos mongers de guerra perderán como la primera vez! VIVA CHILE!"
- news.343.d:0 "¡Necesitamos ayudar a nuestros hermanos chilenos! Hay que parar a estos belicistas!"
+ news.343.e:0 "¡Necesitamos ayudar a nuestros hermanos chilenos! Hay que parar a estos belicistas!"
 
  news.344.t:0 "Ecuador y Bolivia se han unido a la segunda guerra del Pacífico"
  news.344.d:0 "Rápidamente se difundió la noticia de que las fuerzas colombianas y ecuatorianas cruzaron la frontera peruana y se unieron oficialmente a Chile en su lado de la guerra. \n\nEl mundo está conmocionado al ver que lo que antes se consideraba un continente relativamente tranquilo se sale de control. \n\nPor ahora, sólo tenemos que esperar y ver cómo se desarrolla todo esto".
