--- a/localisation/events_l_spanish.yml
+++ b/localisation/events_l_spanish.yml
@@ -3825,3 +3825,10 @@
  perubolivia.1.b:0 "Germán Busch"
  perubolivia.1.c:0 "Luis A. Flores"
  perubolivia.1.e:0 "Manuel Prado Ugarteche"
+
+### Noticias aparte ###
+
+ news.348.t:0 "Caida de Buenos Aires"
+ news.348.d:0 "Expertos militares estan en shock debido a los reportes provenientes de Buenos Aires que confirman que la capital cayó antes las fuerzas Uruguayas. \n\nAunque algunas zonas siguen en combate, la mayoria de las unidades Argentinas se han retirado hacia el campo cercano a la ciudad. \n\nTropas uruguayan han empezado a hacer un desfile militar en la avenida 9 de Julio, del que participara Gabriel Terra, quien voló recientemente a Buenos Aires. \n\nHay rumores de que el gobierno Argentino logro escapar por la ruta 7 hacia los Andes, pero expertos creen que este fue un golpe devastador contra Argentina."
+ news.348.b:0 "Quien es la provincia ahora?"
+ news.348.c:0 "Imposible!"
