--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2923,7 +2923,11 @@
  CHL_FAMAE:0 "FAMAE"
  CHL_FAMAE_desc:0 "FAMAE (Fábricas y Maestranzas del Ejército, "Factories and Workshops of the Army") is a Chilean state-owned firearms manufacturer. Its products are used by the Chilean armed forces and the Carabineros police force. The company produces among others the FAMAE CT-30 carbine, FAMAE SAF submachine gun, FAMAE FD-200 sniper rifle, Rayo rocket launcher and FAMAE revolver."
  
- 
+ URG_economy_officers_tt:0 "§RUnifying a large quantity of land so suddenly will result in your economy becoming unstable and parts of your army to rebel!§!"
+ URG_economic_instability:0 "Economic Instability"
+ URG_rebelling_officers:0 "Rebelling Officers"
+ URG_prepare_the_army:0 "Prepare The Army"
+ URG_prepare_the_army_desc:0 "Our work has only just begun, we still have a long way to go!"
  URG_rodney_arismendi:0 "Rodney Arismendi"
  URG_serafino_mazzolini:0 "Serafino Mazzolini"
  URG_debt_repayment_in_progress:0 "Debt Repayment in Progress"
@@ -3120,13 +3124,17 @@
  BOL_toro_take_longer_tt:0 "Toro will take §G5§! days longer to §Ytake control over a state§!"
  is_in_second_war_of_confederation:0 "Is in the Second War of the Confederation"
  ARG_mobilize_elite:0 "£army_experience  §Y10§!"
- ARG_mobilize_elite_blocked:0 "£army_experience §R10§!"
- SAU_cost_15_command:0 "£pol_power  §Y25§! £command_power  §Y15§!"
- SAU_cost_15_command_blocked:0 "£pol_power  §R25§! £command_power  §R15§!"
- SAU_cost_25_command:0 "£pol_power  §Y50§! £command_power  §Y25§! £army_experience §Y5§!"
- SAU_cost_25_command_blocked:0 "£pol_power  §R50§! £command_power  §R25§! £army_experience §R5§!"
- SAU_cost_45_command:0 "£pol_power  §Y80§! £command_power  §Y45§! £army_experience §Y10§!"
- SAU_cost_45_command_blocked:0 "£pol_power  §R80§! £command_power  §R45§! £army_experience §R10§!"
+ ARG_mobilize_elite_blocked:0 "£army_experience  §R10§!"
+ ARG_division_bonuses_civil_war:0 "£command_power  §Y10§!  £army_experience  §Y1§!"
+ ARG_division_bonuses_civil_war_blocked:0 "£command_power  §R10§!  £army_experience  §R1§!"
+ PRU_cost_of_division:0 "£pol_power  [?PRU_cost_pp|Y0]  £army_experience  [?PRU_cost_xp|Y0]"
+ PRU_cost_of_division_blocked:0 "£pol_power  [?PRU_cost_pp|R0]  £army_experience  [?PRU_cost_xp|R0]"
+ SAU_cost_15_command:0 "£pol_power  §Y25§!  £command_power  §Y15§!  £army_experience §Y5§!"
+ SAU_cost_15_command_blocked:0 "£pol_power  §R25§! £command_power  §R15§!  £army_experience  §R5§!"
+ SAU_cost_25_command:0 "£pol_power  §Y50§!  £command_power  §Y25§!  £army_experience  §Y10§!"
+ SAU_cost_25_command_blocked:0 "£pol_power  §R50§!  £command_power  §R25§!  £army_experience  §R10§!"
+ SAU_cost_45_command:0 "£pol_power  §Y80§!  £command_power  §Y45§!  £army_experience  §Y20§!"
+ SAU_cost_45_command_blocked:0 "£pol_power  §R80§!  £command_power  §R45§!  £army_experience  §R20§!"
  SAU_conscription_in_progress:0 "Has a Conscription Effort in progress"
  SAU_create_weak_unit_tt:0 "Creates a §Ypoorly trained§! militia regiment with §G3§! §Yinfantry batallions§!"
  SAU_create_militia_unit_tt:0 "Creates a §Ysomewhat trained§! militia regiment with §G5§! §Yinfantry batallions§! and §G1§! §Ysupport artillery batallion§!"
