Edited Uruguayan advisors

--- a/localisation/ideas_l_spanish.yml
+++ b/localisation/ideas_l_spanish.yml
@@ -2310,6 +2310,7 @@
  URG_emilio_frugoni:0 "Emilio Frugoni"
  URG_horacio_arredondo:0 "Horacio Arredondo"
  URG_pedro_manini_rios:0 "Pedro Manini Rios"
+ URG_alfredo_navarro:0 "Alfredo Navarro"
  URG_vittorio_amato_masso:0 "Julio Roletti"
  URG_ernesto_sanchez_elizondo:0 "Cesáreo L. Berisso"
  URG_hector_lopez_camara:0 "Alberto Mañe"
@@ -2321,7 +2322,7 @@
  URG_jorge_eloi_mendoza:0 "Domingo Mendivil"
  URG_cantido_quintio_reyes:0 "Andrés Puyol"
  URG_enrico_amancias_rodriguez:0 "Alfredo Baldomir"
- URG_manuel_heinz_azpurua:0 "Manuel Heinz Azpurua"
+ URG_oscar_diego_gestido:0 "Oscar Diego Gestido"
  URG_a_martin_de_la_flores:0 "Esteban Cristi"
  URG_carlos_neves_ochoa:0 "Federico García"
  URG_rafael_marques_ayala:0 "Francisco Jovellanos"
