--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -646,10 +646,10 @@
  GUA_ADJ:0 "Guatemalan"
  HON_fascism:0 "Corporatist Honduras"
  HON_fascism_DEF:0 "Corporatist Honduras"
- HON_democratic:0 "Honduras"
- HON_democratic_DEF:0 "Honduras"
- HON_neutrality:0 "Atlas Honduras"
- HON_neutrality_DEF:0 "Atlas Honduras"
+ HON_democratic:0 "Republic of Honduras"
+ HON_democratic_DEF:0 "Republic of Honduras"
+ HON_neutrality:0 "Honduras"
+ HON_neutrality_DEF:0 "Honduras"
  HON_communism:0 "Honduran Commonwealth"
  HON_communism_DEF:0 "the Honduran Commonwealth"
  HON_fascism_ADJ:0 "Honduran"
