--- a/localisation/countries_l_spanish.yml
+++ b/localisation/countries_l_spanish.yml
@@ -646,7 +646,7 @@
  GUA_ADJ:0 "de Guatemala"
  HON_fascism:0 "Nueva Honduras"
  HON_fascism_DEF:0 "Nueva Honduras"
- HON_democratic:0 "Honduras"
+ HON_democratic:0 "República de Honduras"
  HON_democratic_DEF:0 "Honduras"
  HON_neutrality:0 "Honduras"
  HON_neutrality_DEF:0 "Honduras"
