--- a/localisation/parties_l_spanish.yml
+++ b/localisation/parties_l_spanish.yml
@@ -375,6 +375,8 @@
  COL_democratic_party_long:0 "Partido Liberal Colombiano"
  COL_neutrality_party:0 "Conservador"
  COL_neutrality_party_long:0 "Partido Conservador Colombiano"
+ COL_fascism_party:0 "Conservador"
+ COL_fascism_party_long:0 "Partido Conservador Colombiano"
  CZE_communism_party:0 "KSC"
  CZE_communism_party_long:0 "Komunistická strana Ceskoslovenska"
  CZE_democratic_party:0 "CSNS"
@@ -408,12 +410,28 @@
  NIC_democratic_party_long:0 "Partido Liberal Nacionalista"
  COS_democratic_party:0 "PR"
  COS_democratic_party_long:0 "Partido Republicano"
- COS_communism_party:0 "PVP"
- COS_communism_party_long:0 "Partido Vanguardia Popular"
+ COS_communism_party:0 "BOC"
+ COS_communism_party_long:0 "Bloque de Obreros y Campesinos"
+ COS_fascism_party:0 "PNCR"
+ COS_fascism_party_long:0 "Partido Nacionalsocialista de Costa Rica"
+ COS_neutrality_party:0 "PR"
+ COS_neutrality_party_long:0 "Partido Republicano"
  ELS_fascism_party:0 "Pro-Patria"
  ELS_fascism_party_long:0 "Partido Nacional 'Pro-Patria'"
- GUA_democratic_party:0 "PLP"
- GUA_democratic_party_long:0 "Partido Progresista Liberal"
+ ELS_democratic_party:0 "PL"
+ ELS_democratic_party_long:0 "Partido Laborista"
+ ELS_communism_party:0 "PCS"
+ ELS_communism_party_long:0 "Partido Comunista Salvadoreño"
+ ELS_neutrality_party:0 "Consejo de Gobierno"
+ ELS_neutrality_party_long:0 "Consejo de Gobierno Revolucionario"
+ GUA_democratic_party:0 "FPL"
+ GUA_democratic_party_long:0 "Frente Popular Libertador"
+ GUA_communism_party:0 "PCCA"
+ GUA_communism_party_long:0 "Partido Comunista de Centro América"
+ GUA_fascism_party:0 "PNG"
+ GUA_fascism_party_long:0 "Partido Nacionalsocialista de Guatemala"
+ GUA_neutrality_party:0 "PLP"
+ GUA_neutrality_party_long:0 "Partido Liberal Progresista"
  SIA_neutrality_party:0 "Khana Ratsadon"
  SIA_neutrality_party_long:0 "Khana Ratsadon"
  RG_neutrality_party:0 "Colorado"
@@ -464,13 +482,22 @@
  SLO_fascism_party_long:0 "Hlinkova Slovenská Ludová Strana"
  SLO_communism_party:0 "KSS"
  SLO_communism_party_long:0 "Komunistická strana Slovenska"
- ECU_democratic_party:0 "Ecuador"
- ECU_democratic_party_long:0 "República del Ecuador"
+ ECU_democratic_party:0 "Páez"
+ ECU_democratic_party_long:0 "Gobierno de Páez"
  ECU_communism_party:0 "PCE"
  ECU_communism_party_long:0 "Partido Comunista del Ecuador"
+ ECU_fascism_party:0 "ARNE"
+ ECU_fascism_party_long:0 "Acción Revolucionaria Nacionalista Ecuatoriana"
+ ECU_neutrality_party:0 "Junta Militar"
+ ECU_neutrality_party_long:0 "Junta Militar de Gobierno Provisional"
  HON_democratic_party:0 "PLH"
- HON_communism_party:0 "PCH"
- HON_communism_party_long:0 "Partido Comunista de Honduras"
+ HON_democratic_party_long:0 "Partido Liberal de Honduras"
+ HON_neutrality_party:0 "PNH"
+ HON_neutrality_party_long:0 "Partido Nacional de Honduras"
+ HON_fascism_party:0 "PNH"
+ HON_fascism_party_long:0 "Partido Nacional de Honduras"
+ HON_communism_party:0 "BOC"
+ HON_communism_party_long:0 "Bloque de Obreros y Campesinos"
  NEP_neutrality_party:0 "Dinastía Rana"
  PAN_democratic_party:0 "PLD"
  PAN_democratic_party_long:0 "Partido Liberal Doctrinario"
@@ -495,16 +522,30 @@
  TAN_communism_party_long:0 "Partido Comunista de la URSS"
  PAR_communism_party:0 "PRF"
  PAR_communism_party_long:0 "Partido Revolucionario Febrerista"
- CUB_democratic_party:0 "Unión"
- CUB_democratic_party_long:0 "Unión Nacional"
+ CUB_democratic_party:0 "Union"
+ CUB_democratic_party_long:0 "National Union"
  CUB_communism_party:0 "PCC"
  CUB_communism_party_long:0 "Partido Comunista Cubano"
+ CUB_fascism_party:0 "FC"
+ CUB_fascism_party_long:0 "Falange Cubana"
+ CUB_neutrality_party:0 "CSD"
+ CUB_neutrality_party_long:0 "Coalición Socialista Democrática"
  DOM_fascism_party:0 "PD"
  DOM_fascism_party_long:0 "Partido Dominicano"
+ DOM_communism_party:0 "PSP"
+ DOM_communism_party_long:0 "Partido Socialista Popular"
+ DOM_democratic_party:0 "PRD"
+ DOM_democratic_party_long:0 "Partido Revolucionario Dominicano"
+ DOM_neutrality_party:0 "PRD"
+ DOM_neutrality_party_long:0 "Partido Revolucionario Dominicano"
  HAI_democratic_party:0 "Vincent"
- HAI_democratic_party_long:0 "Presidente Sténio Vincent"
+ HAI_democratic_party_long:0 "President Sténio Vincent"
  HAI_communism_party:0 "PKA"
  HAI_communism_party_long:0 "Pati Kominis Ayisyen"
+ HAI_neutrality_party:0 "Conseil Exécutif"
+ HAI_neutrality_party_long:0 "Conseil Exécutif Militaire"
+ HAI_fascism_party:0 "PUN"
+ HAI_fascism_party_long:0 "Parti Unité Nationale"
  KOR_communism_party:0 "PTC"
  KOR_communism_party_long:0 "Partido de los Trabajadores de Corea"
  KOR_democratic_party:0 "Partido Liberal"
