Revert "Merge pull request #5 from En-Union-y-Libertad/Oscarrefachero's-branch"
This reverts commit e5d395cffd315d14dc515cbbf903509127ec2884, reversing
changes made to ae3da70a601a9dddeb8db5252ddde485fee65d7c.

--- a/localisation/lar_decisions_l_english.yml
+++ b/localisation/lar_decisions_l_english.yml
@@ -110,7 +110,7 @@
  URG_arrest_politicians:0 "Arrest People Who Seem Suspicious"
  URG_set_free_politicians:0 "Set Free Some Who Were Arrested"
  URG_repaying_the_debt_to_britain:0 "Repaying our Debt to the British"
- URG_repaying_the_debt_to_britain_desc:0 "The British have not been happy with our reluctance to pay the debt we have with them, but that will change starting today. Our industry is strong enough now that we can afford repaying it, plus it will help to have the British an an ally rather than an enemy. \n\nCurrent percentage of our debt that we have payed back:  [?URG_debt_to_britain|G0]§G%§!"
+ URG_repaying_the_debt_to_britain_desc:0 "The British have not been happy with our reluctance to pay the debt we have with them, but that will change starting today. Our industry is strong enough now that we can afford repaying it, plus it will help to have the British an an ally rather than an enemy. \n\nCurrent percentage of our debt that we have payed back: [?URG_debt_to_britain|G0]%"
  URG_small_debt_repayment:0 "Small Debt Repayment"
  URG_medium_debt_repayment:0 "Medium Debt Repayment"
  URG_large_debt_repayment:0 "Large Debt Repayment"
@@ -307,15 +307,6 @@
  PRU_the_imperial_army:0 "The Imperial Army"
  PRE_conquer_FROM:0 "Conquer [FROM.GetName]"
  PRE_unlocks_conquering_decisions_tt:0 "Unlocks §YConquer Country§! decisions, allowing you to get §Ywargoals§! on every nation in the §YCaribbean§! and §YNorth America§! that shares a border with you."
- URG_unlocks_conquering_decisions_tt:0 "Unlocks §YConquer Country§! decisions, allowing you to get §Ywargoals§! on every nation in §YSouth America§! that shares a border with you."
- URG_gain_edge_tt:0 "Unlocks decisions to §Gincrease§! your attack and defense momentarily against your enemies."
- URG_teritorial_expansion:0 "Expanding our Territory"
- URG_teritorial_expansion_desc:0 "Our borders as of now aren't enoguh, we need to push beyond them and establish ourselves as a regional power, and maybe even a superpower if we play our cards right. It's impossible to tell what will happen in the future, but we will make sure to at least try for victory!"
- URG_conquer_FROM:0 "Conquer [FROM.GetName]"
- URG_gain_the_edge_against_FROM:0 "Gain the Edge Against [FROM.GetName]"
- URG_integrate_the_province_of_FROM:0 "Integrate the Province of [FROM.GetName]"
-
-
  PRU_investing_in_the_venezuelan_oil:0 "Investing in the Venezuelan Oil"
  VEN_PRU_investing_in_our_oil:0 "Peru Investing in our Oil"
  PRU_effect_when_idea_removed_tt:0 "§YThe following effects will take place once the idea is removed: §!"
@@ -340,19 +331,6 @@
  PRU_gain_the_edge_against_from:0 "Gain the Edge Against [FROM.GetName]"
  BOL_create_2_guardia_nacional_units_tt:0 "§G2§! §YGuardia Nacional§! units will be spawned in"
  is_PBC:0 "Is the Peru-Bolivian Confederation"
- URG_form_liga_federal_category:0 "Re-Form the Liga Federal"
- URG_form_liga_federal_category_desc:0 "The Liga Federal was an alliance of provinces in what is now considered Argentina, Uruguay, and Southern Brazil. This once existing state emerged during the revolution against the Spanish, however, it was short lived. Maybe with enough expansion and subjegation from our neighbors, we may be able to bring back this once powerful state."
- form_liga_federal:0 "Re-Form the Liga Federal"
- SAU_conscripted_in_state:0 "Stricter Conscription Laws have already been put in effect"
- URG_purchasing_british_ships:0 "Purchasing British Ships"
- URG_purchasing_british_ships_desc:0 "Thanks to our new allience with Britain and a growing economy, we can afford purchasing British ships. The quality of the ship will determine its cost and for how long we will have to pay for it. \n\nThe British must first accept any request for a purchase of a ship, and the British AI will be influenced based on the following factors: \n\n - §YThe current size of their Navy§! \n\n - §YTheir opinion of us§! \n\n - §YHow small our Navy currently is§! \n\n - §YIf they are at war or not§! \n\n - §YOur current industrial power§!"
- URG_purchase_british_submarines:0 "Purchase British Submarines"
- URG_purchase_destroyers:0 "Purchase British Destroyers"
- URG_purchase_light_cruiser:0 "Purchase British Light Cruisers"
- URG_purchase_heavy_cruiser:0 "Purchase British Heavy Cruisers"
- URG_purchase_carrier:0 "Purchase British Carriers"
- URG_purchase_battleship:0 "Purchase British Battleships"
- URG_payed_off_debt_tt:0 "Your debt to the British has been payed off"
 
 
  # Chile
