--- a/localisation/lar_decisions_l_spanish.yml
+++ b/localisation/lar_decisions_l_spanish.yml
@@ -630,26 +630,6 @@
  PRU_unlock_alpaca:0 "Desbloquea una plantilla de §Ydivisión§! gratuita y otorga §Y5 divisiones de alpaca§!." 
  PRU_upgrade_conscription:0 "Completar este foco §YAumentará tu conscripción al siguiente nivel§!."
  PRU_pan_highway_tooltip:0 "Construye la §YCarretera Panamericana§! (3 infraestructuras en Lima, 1 en Arequipa, y 1 en el resto de la carretera).\n\n§GAumenta la opinión del comercio de Chile, Ecuador, y aumenta la opinión que tienen de ti.§!"
- URG_form_liga_federal_category:0 "Re-Formar la Liga Federal"
- URG_form_liga_federal_category_desc:0 "La Liga Federal fue una alianza de provincias en lo que hoy se considera Argentina, Uruguay y el sur de Brasil. Este estado, una vez existente, surgió durante la revolución contra los españoles, sin embargo, duró poco. Tal vez, con la suficiente expansión y subyugación de nuestros vecinos, podamos traer de vuelta este otrora poderoso estado."
- form_liga_federal:0 "Re-Formar la Liga Federal"
- SAU_conscripted_in_state:0 "Ya se han puesto en marcha leyes de reclutamiento más estrictas"
- URG_unlocks_conquering_decisions_tt:0 "Desbloquea las decisiones §YConquistar País§!, permitiéndote conseguir §YGoles de guerra§! en cada nación de §YSudamérica§! que comparta frontera contigo."
- URG_gain_edge_tt:0 "Desbloquea las decisiones para §GAumentar§! tu ataque y defensa momentáneamente contra tus enemigos"
- URG_teritorial_expansion:0 "Expandir nuestro territorio"
- URG_teritorial_expansion_desc:0 "Nuestras fronteras por ahora no son suficientes, necesitamos ir más allá de ellas y establecernos como una potencia regional, y tal vez incluso una superpotencia si jugamos bien nuestras cartas. Es imposible saber qué ocurrirá en el futuro, ¡pero nos aseguraremos de intentar al menos la victoria!"
- URG_conquer_FROM:0 "Conquistar [FROM.GetName]"
- URG_gain_the_edge_against_FROM:0 "Ganar la ventaja contra [FROM.GetName]"
- URG_integrate_the_province_of_FROM:0 "Integrar la provincia de [FROM.GetName]"
- URG_purchasing_british_ships:0 "Compra de Buques Británicos"
- URG_purchasing_british_ships_desc:0 "Gracias a nuestra nueva alianza con Gran Bretaña y a una economía en crecimiento, podemos permitirnos comprar barcos británicos. La calidad del barco determinará su coste y durante cuánto tiempo tendremos que pagarlo. \n\nLos Britanicos deben aceptar primero cualquier solicitud de compra de un barco, y la IA británica se verá influida por los siguientes factores: \n\n - §YEl tamaño actual de su Armada.§! \n\n - §YSu opinión sobre nosotros.§! \n\n - §YEl tamaño actual de nuestra Armada. §! \n\n - §YSi están en guerra o no§! \n\n - §YNuestro poder industrial§!"
- URG_purchase_british_submarines:0 "Comprar submarinos británicos"
- URG_purchase_destroyers:0 "Comprar destructores británicos"
- URG_purchase_light_cruiser:0 "Comprar cruceros ligeros británicos"
- URG_purchase_heavy_cruiser:0 "Comprar cruceros pesados británicos"
- URG_purchase_carrier:0 "Comprar portaaviones británicos"
- URG_purchase_battleship:0 "Comprar acorazados británicos"
- URG_payed_off_debt_tt:0 "Tu deuda con los Británicos ha sido pagada"
 
  # Chile
 
@@ -871,7 +851,7 @@
  URG_arrest_politicians:0 "Arrestar a la gente que parece sospechosa"
  URG_set_free_politicians:0 "Liberar a algunos que fueron arrestados"
  URG_repaying_the_debt_to_britain:0 "Pagar nuestra deuda con los británicos"
- URG_repaying_the_debt_to_britain_desc:0 "Los británicos no han estado contentos con nuestra reticencia a pagar la deuda que tenemos con ellos, pero eso cambiará a partir de hoy. Nuestra industria es lo suficientemente fuerte ahora como para permitirnos pagarla, además de que nos ayudará tener a los británicos como aliados en lugar de enemigos". \n\nPorcentaje actual de nuestra deuda que hemos pagado:  [?URG_debt_to_britain|G0]§G%§!"
+ URG_repaying_the_debt_to_britain_desc:0 "Los británicos no han estado contentos con nuestra reticencia a pagar la deuda que tenemos con ellos, pero eso cambiará a partir de hoy. Nuestra industria es lo suficientemente fuerte ahora como para permitirnos pagarla, además de que nos ayudará tener a los británicos como aliados en lugar de enemigos". \n\nPorcentaje actual de nuestra deuda que hemos pagado: [?URG_debt_to_britain|G0]%"
  URG_small_debt_repayment:0 "Devolución de deuda pequeña"
  URG_medium_debt_repayment:0 "Devolución de deuda media"
  URG_large_debt_repayment:0 "Reembolso de deuda grande"
