Revert "Revert "Merge pull request #5 from En-Union-y-Libertad/Oscarrefachero's-branch""
This reverts commit 54443d613e0433208faefa8e19d1b9d1041e2203.

--- a/localisation/ideas_l_spanish.yml
+++ b/localisation/ideas_l_spanish.yml
@@ -1434,7 +1434,7 @@
  ARG_distrust_of_military_7_desc:0 "Con el golpe de estado de 1930 aún en la memoria reciente de muchos argentinos, no es sorprendente que la mayoría de la población esté en contra de los militares, viéndolo como algo negativo que hace más mal que bien. Si queremos construir, tenemos que recuperar la confianza de la población en general."
  ARG_infantry_production:0 "Producción de equipos de infantería"
  ARG_infantry_production_desc:0 "Gracias a nuestros esfuerzos, ahora podemos producir equipo de infantería a un precio más barato y de forma más eficiente".
- ARG_drift_back_towards_the_confederation_idea:0 "Drift back towards the Confederation"
+ ARG_drift_back_towards_the_confederation_idea:0 "Regrese hacia la Confederación"
  ARG_drift_back_towards_the_confederation_idea_desc:0 "La población se está despertando a sí misma. Cuando llegue el momento, atacaremos!"
  ARG_death_to_the_Unitarios:0 "Muerte a los Unitarios"
  ARG_death_to_the_Unitarios_desc:0 "¡Abajo los Unitarios! ¡Preferimos morir que renunciar a nuestro destino!"
@@ -1649,12 +1649,18 @@
  CHL_FAMAE_desc:0 "FAMAE (Fábricas y Maestranzas del Ejército de Chile) es una institución pública dedicada a la fabricación de armas para el Ejército de Chile. Desde 1811 es considerada la más antigua de América, FAMAE ha contribuido al desarrollo industrial de Chile, caracterizándose por la garantía de sus productos, los cuales han sido exportado también a otros países."
  PRU_social_democracy_idea:0 "Democracia Social"
  is_in_second_war_of_confederation:0 "Está en la segunda guerra de la Confederación"
- SAU_cost_15_command:0 "£pol_power §Y25§! £command_power §Y15§!"
- SAU_cost_15_command_blocked:0 "£pol_power §R25§! £command_power §R15§!"
- SAU_cost_25_command:0 "£pol_power §Y50§! £command_power §Y25§! £army_experience §Y5§!"
- SAU_cost_25_command_blocked:0 "£pol_power §R50§! £command_power §R25§! £army_experience §R5§!"
- SAU_cost_45_command:0 "£pol_power §Y80§! command_power §Y45§! £army_experience §Y10§!"
- SAU_cost_45_command_blocked:0 "£pol_power §R80§! £command_power §R45§! £army_experience §R10§!"
+ ARG_mobilize_elite:0 "£army_experience  §Y10§!"
+ ARG_mobilize_elite_blocked:0 "£army_experience  §R10§!"
+ ARG_division_bonuses_civil_war:0 "£command_power  §Y10§! £army_experience §Y1§!"
+ ARG_division_bonuses_civil_war_blocked:0 "£command_power  §R10§! £army_experience §R1§!"
+ PRU_cost_of_division:0 "£pol_power  [?PRU_cost_pp|Y0]  £army_experience  [?PRU_cost_xp|Y0]"
+ PRU_cost_of_division_blocked:0 "£pol_power  [?PRU_cost_pp|R0]  £army_experience  [?PRU_cost_xp|R0]"
+ SAU_cost_15_command:0 "£pol_power  §Y25§!  £command_power  §Y15§!  £army_experience §Y5§!"
+ SAU_cost_15_command_blocked:0 "£pol_power  §R25§! £command_power  §R15§!  £army_experience  §R5§!"
+ SAU_cost_25_command:0 "£pol_power  §Y50§!  £command_power  §Y25§!  £army_experience  §Y10§!"
+ SAU_cost_25_command_blocked:0 "£pol_power  §R50§!  £command_power  §R25§!  £army_experience  §R10§!"
+ SAU_cost_45_command:0 "£pol_power  §Y80§!  £command_power  §Y45§!  £army_experience  §Y20§!"
+ SAU_cost_45_command_blocked:0 "£pol_power  §R80§!  £command_power  §R45§!  £army_experience  §R20§!"
  SAU_conscription_in_progress:0 "Tiene un esfuerzo de reclutamiento en curso"
  SAU_create_weak_unit_tt:0 "Crea un regimiento de milicia §Ypobremente entrenado§! con §G3§! §YBatallones de infantería§!"
  SAU_create_militia_unit_tt:0 "Crea un regimiento de milicia con §G5§! §YBatallones de infantería§! y §G1§! §YBatallón de artillería de apoyo§!"
@@ -2896,6 +2902,7 @@
  MTG_naval_treaty_adherent_reduced:0 "Apelación a la cláusula de ajuste"
  MTG_naval_treaty_adherent_reduced_desc:0 "Como varios firmantes del Tratado Naval de Washington han abandonado el Tratado Naval de Londres, hemos apelado a la cláusula de ajuste que reduce el límite de tamaño y armamento de los buques capitales."
  GER_air_safety_regulations:0 "Normativa de seguridad en el aire"
+ ARG_air_safety_regulations:0 "Normativa de seguridad en el aire"
  GER_hans_oster:0 "Hans Oster"
  GER_alfred_hugenberg:0 "Alfred Hugenberg"
  GER_carl_friedrich_goerdeler:0 "Carl Friedrich Goerdeler"
@@ -3011,6 +3018,11 @@
  HOL_DAF_trucks:0 "DAF Trucks"
  ckd:0 "CKD"
  
+ URG_economy_officers_tt:0 "§RUnir una gran cantidad de tierras tan repentinamente hará que tu economía se vuelva inestable y que parte de tu ejército se rebele!§!"
+ URG_economic_instability:0 "Inestabilidad económica"
+ URG_rebelling_officers:0 "Oficiales rebeldes"
+ URG_prepare_the_army:0 "Preparar el ejército"
+ URG_prepare_the_army_desc:0 "Nuestro trabajo no ha hecho más que empezar, ¡todavía nos queda mucho camino por recorrer!"
  URG_the_terra_dictatorship:0 "La Dictadura de Terra"
  URG_the_terra_dictatorship_idea:0 "La Dictadura de Terra"
  URG_the_terra_dictatorship_idea_desc:0 "Gabriel Terra ha estado gobernando la nación con mano de hierro desde que asumió el poder. Debido a esto, muchos enemigos se hicieron a lo largo del camino, y muchos de ellos fueron tratados con el arresto de ellos. Esto junto con múltiples golpes de estado ha convertido a la dictadura en una frágil, donde en el momento en que Terra deje de gobernar con brutalidad, el país arderá en llamas.  \n\n§RSi el apoyo a Terra cae por debajo del 35%, entonces se lanzará en una guerra civil casi imposible!"
