More Leaders, Patagonia, Sul and extra Uruguay content

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -476,6 +476,17 @@
  ARG_democratic_ADJ:0 "Argentinean"
  ARG_neutrality_ADJ:0 "Argentinean"
  ARG_communism_ADJ:0 "Argentinean"
+ PAT_fascism:0 "Mapuche Empire"
+ PAT_fascism_DEF:0 "the Mapuche Empire"
+ PAT_democratic:0 "Indigenous Republic of the Patagonia"
+ PAT_democratic_DEF:0 "the Indigenous Republic of the Patagonia"
+ PAT_communism:0 "Patagonian Worker’s Front"
+ PAT_communism_DEF:0 "the Patagonian Worker’s Front"
+ PAT_neutrality:0 "Kingdom of Araucanía and Patagonia"
+ PAT_neutrality_DEF:0 "the Kingdom of Araucanía and Patagonia"
+ PAT:0 "Patagonia"
+ PAT_DEF:0 "the Patagonia"
+ PAT_ADJ:0 "Patagonian"
  ARG:0 "Argentina"
  ARG_DEF:0 "Argentina"
  ARG_ADJ:0 "Argentinean"
@@ -509,6 +520,17 @@
  BRA:0 "Brazil"
  BRA_DEF:0 "Brazil"
  BRA_ADJ:0 "Brazilian"
+ SUL_fascism:0 "Unitary State of Rio Grande"
+ SUL_fascism_ADJ:0 "the Unitary State of Rio Grande"
+ SUL_communism:0 "Union of Sul"
+ SUL_communism_ADJ:0 "the Union of Sul"
+ SUL_democratic:0 "Republic of Sul"
+ SUL_democratic_ADJ:0 "the Republic of Sul"
+ SUL_neutrality:0 "Piratini Republic"
+ SUL_neutrality_ADJ:0 "the Piratini Republic"
+ SUL:0 "Sul"
+ SUL_DEF:0 "Sul"
+ SUL_ADJ:0 "Sul"
  CAN_fascism:0 "Unitary Canada"
  CAN_fascism_DEF:0 "Unitary Canada"
  CAN_democratic:0 "Canada"
