--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2940,7 +2940,13 @@
  URG_safu:0 "Sociedad Anónima Fabril Uruguaya"
  URG_ute:0 "Usinas y Trasmisiones Eléctricas"
  URG_ute_desc:0 "The National Administration of Power Plants and Electric Transmission, better known by its acronym UTE, is the state company tasked with the production and supply of electricity in Uruguay. Created on October 21, 1912, when a law was promulgated that gave rise to this public company, within the framework of the reformist and modernization drive of the successive Batllist governments."
- URG_aserradero_oriental:0 "Aserradero Oriental"
+ URG_SRCA:0 "SRCA"
+ URG_SRCA_desc:0 "The Servicio de Construcciones, Reparaciones y Armamento (Construction, Repairing and Armament Service) is the sub-branch of the navy tasked with the design, construction and maintenance of ships and the management of dockyards."
+ URG_escuela_militar_aeronautica:0 "Escuela Militar de Aeronáutica"
+ URG_PASMA:0 "PESMA"
+ URG_CIACA:0 "CIACA"
+ URG_Ford:0 "Ford Uruguay" 
+
  urg_ancap_trait:0 "State-Owned Company"
  URG_debt_to_the_british:0 "Debt to the British"
  URG_debt_to_the_british_desc:0 "Due to our various industrial expansions in the last few decades, we have amassed a debt that needs to be payed back to the British. The British are expecting us to pay this debt back, and with the world heating up all around us, we can only hope no blood is shed with this problem and we are able to pay it back peacefully. \n§RThis idea will be removed when all of your debt to the British has been repayed."
