--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -223,6 +223,12 @@
  ARG_communism_party_long:0 "Partido Comunista de la Argentina"
  ARG_neutrality_party:0 "Concordancia"
  ARG_neutrality_party_long:0 "Concordancia"
+ PAT_neutrality_party:0 "Throne of Patagonia" 1902 1696
+ PAT_neutrality_party_long:0 "Throne of Patagonia" 
+ PAT_communism_party:0 "Unión Sindical"
+ PAT_communism_party_long:0 "Unión Sindical"
+ PAT_democratic_party:0 "MI"
+ PAT_democratic_party_long:0 "Movimiento Indigenista"
  BRA_fascism_party:1 "AIB"
  BRA_fascism_party_long:1 "Ação Integralista Brasileira"
  BRA_communism_party:1 "PCB"
@@ -235,6 +241,14 @@
  BRA_monarchy_party_long:0 "Acção Imperial Patrianovista Brasileira"
  BRA_antimonarchist_coalition:0 "CAB"
  BRA_antimonarchist_coalition_long:0 "Coalizão Antimonárquica Brasileira"
+ SUL_fascism_party:0 "Falange Gaucha" 
+ SUL_fascism_party_long:0 "Falange Gaucha"  
+ SUL_communism_party:0 "PCS"
+ SUL_communism_party_long:0 "Partido Comunista do Sul"
+ SUL_neutrality_party:0 "PCoS"
+ SUL_neutrality_party_long:0 "Partido Constitucionalista do Sul"
+ SUL_democratic_party:0 "PDT"
+ SUL_democratic_party_long:0 "Partido dos Trabalhadores"
  TUR_fascism_party:0 "Faşist Konsey"
  TUR_fascism_party_long:0 "Faşist Konsey"
  TUR_communism_party:0 "TKP"
@@ -397,6 +411,12 @@
  BOL_neutrality_party_long:0 "Quintanilla government"
  NIC_democratic_party:0 "PLN"
  NIC_democratic_party_long:0 "Partido Liberal Nacionalista"
+ NIC_neutrality_party:0 "PLN"
+ NIC_neutrality_party_long:0 "Partido Liberal Nacionalista" 
+ NIC_communism_party:0 "BTA"
+ NIC_communism_party_long:0 "Bloque de Trabajadores Antifascistas"
+ NIC_fascism_party:0 "Blueshirts"
+ NIC_fascism_party_long:0 "Nicaraguan Blueshirts"
  COS_democratic_party:0 "PR"
  COS_democratic_party_long:0 "Partido Republicano"
  COS_communism_party:0 "BOC"
@@ -492,6 +512,10 @@
  PAN_democratic_party_long:0 "Partido Liberal Doctrinario"
  PAN_communism_party:0 "PPP"
  PAN_communism_party_long:0 "Partido del Pueblo de Panamá"
+ PAN_fascism_party:0 "PNR"
+ PAN_fascism_party_long:0 "Partido Nacional Revolucionario"
+ PAN_neutrality_party:0 "PLD"
+ PAN_neutrality_party_long:0 "Partido Liberal Democratico" 
  PHI_fascism_party:0 "Ganap"
  PHI_fascism_party_long:0 "Ganap Party"
  PHI_democratic_party:0 "NP"
