--- a/localisation/victory_points_l_spanish.yml
+++ b/localisation/victory_points_l_spanish.yml
@@ -1065,6 +1065,9 @@
  VICTORY_POINTS_13271:0 "Melo"
  VICTORY_POINTS_13253:0 "Florida" 
 
+ #NUEVOS VP - ARGENTINA
+ VICTORY_POINTS_13682:0 "Puerto Madryn" 
+
  #NUEVOS VP - CHILE
  VICTORY_POINTS_5121:0 "Temuco"
  VICTORY_POINTS_13742:0 "Linares" #13742 - 279
