--- a/localisation/countries_l_spanish.yml
+++ b/localisation/countries_l_spanish.yml
@@ -479,6 +479,17 @@
  ARG:0 "Argentina"
  ARG_DEF:0 "Argentina"
  ARG_ADJ:0 "de Argentina"
+ PAT_fascism:0 "Imperio Mapuche"
+ PAT_fascism_DEF:0 "el Imperio Mapuche"
+ PAT_democratic:0 "República Indigena de la Patagonia"
+ PAT_democratic_DEF:0 "la República Indigena de la Patagonia"
+ PAT_communism:0 "Frente Obrero Patagónico"
+ PAT_communism_DEF:0 "el Frente Obrero Patagónico"
+ PAT_neutrality:0 "Reino de la Araucanía y de la Patagonia"
+ PÄT_neutrality_DEF:0 "el Reino de la Araucanía y de la Patagonia"
+ PAT:0 "Patagonia"
+ PAT_DEF:0 "la Patagonia" 
+ PAT_ADJ:0 "de la Patagonia"
  BOL_fascism:0 "Bolivia Falangista"
  BOL_fascism_DEF:0 "Bolivia Falangista"
  BOL_democratic:0 "República Boliviana"
@@ -509,6 +520,17 @@
  BRA:0 "Brasil"
  BRA_DEF:0 "Brasil"
  BRA_ADJ:0 "de Brasil"
+ SUL_fascism:0 "Estado Unitario de Rio Grande"
+ SUL_fascism_ADJ:0 "el Estado Unitario de Rio Grande"
+ SUL_communism:0 "Union de Sul"
+ SUL_communism_ADJ:0 "la Union of Sul"
+ SUL_democratic:0 "República de Sul"
+ SUL_democratic_ADJ:0 "la República de Sul"
+ SUL_neutrality:0 "República Piratini"
+ SUL_neutrality_ADJ:0 "la República Piratini"
+ SUL:0 "Sul"
+ SUL_DEF:0 "Sul"
+ SUL_ADJ:0 "de Sul" 
  CAN_fascism:0 "Imperio Canadiense"
  CAN_fascism_DEF:0 "El Imperio Canadiense"
  CAN_democratic:0 "Canadá"
