--- a/localisation/parties_l_spanish.yml
+++ b/localisation/parties_l_spanish.yml
@@ -224,6 +224,12 @@
  ARG_federalism_party_long:0 "Partido Federal"
  ARG_neutrality_party:0 "Concordancia"
  ARG_neutrality_party_long:0 "Concordancia"
+ PAT_neutrality_party:0 "Throne of Patagonia"
+ PAT_neutrality_party_long:0 "Throne of Patagonia" 
+ PAT_communism_party:0 "Unión Sindical"
+ PAT_communism_party_long:0 "Unión Sindical"
+ PAT_democratic_party:0 "MI"
+ PAT_democratic_party_long:0 "Movimiento Indigenista" 
  peronism:0 "Peronismo"
  peronism_desc:0 "Peronismo"
  peronism_noun:0 "Peronismo"
@@ -246,6 +252,14 @@
  BRA_monarchy_party_long:0 "Acção Imperial Patrianovista Brasileira"
  BRA_antimonarchist_coalition:0 "CAB"
  BRA_antimonarchist_coalition_long:0 "Coalizão Antimonárquica Brasileira"
+ SUL_fascism_party:0 "Falange Gaucha" 
+ SUL_fascism_party_long:0 "Falange Gaucha"  
+ SUL_communism_party:0 "PCS"
+ SUL_communism_party_long:0 "Partido Comunista do Sul"
+ SUL_neutrality_party:0 "PCoS"
+ SUL_neutrality_party_long:0 "Partido Constitucionalista do Sul"
+ SUL_democratic_party:0 "PDT"
+ SUL_democratic_party_long:0 "Partido dos Trabalhadores" 
  TUR_fascism_party:0 "Millet Partisi"
  TUR_fascism_party_long:0 "Millet Partisi"
  TUR_communism_party:0 "TKP"
@@ -408,6 +422,12 @@
  BOL_neutrality_party_long:0 "Gobierno Quintanilla"
  NIC_democratic_party:0 "PLN"
  NIC_democratic_party_long:0 "Partido Liberal Nacionalista"
+ NIC_neutrality_party:0 "PLN"
+ NIC_neutrality_party_long:0 "Partido Liberal Nacionalista" 
+ NIC_communism_party:0 "BTA"
+ NIC_communism_party_long:0 "Bloque de Trabajadores Antifascistas"
+ NIC_fascism_party:0 "Camisas Azules"
+ NIC_fascism_party_long:0 "Camisas Azules"
  COS_democratic_party:0 "PR"
  COS_democratic_party_long:0 "Partido Republicano"
  COS_communism_party:0 "BOC"
@@ -503,6 +523,10 @@
  PAN_democratic_party_long:0 "Partido Liberal Doctrinario"
  PAN_communism_party:0 "PPP"
  PAN_communism_party_long:0 "Partido del Pueblo de Panamá"
+ PAN_fascism_party:0 "PNR"
+ PAN_fascism_party_long:0 "Partido Nacional Revolucionario"
+ PAN_neutrality_party:0 "PLD"
+ PAN_neutrality_party_long:0 "Partido Liberal Democratico" 
  PHI_fascism_party:0 "Ganap"
  PHI_fascism_party_long:0 "Partido Ganap"
  PHI_democratic_party:0 "NP"
