Leaders Final Part + Misc

--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2864,6 +2864,9 @@
  ARG_fm_air_desc:0 "Fabricaciones Militares, the full name is Fabricaciones Militares Sociedad del Estado (Spanish for Military Industries State Corporation), is a state-owned Argentine arms manufacturer based in Buenos Aires. The company was a government agency under the name Dirección General de Fabricaciones Militares (Directorate General of Military Industries). Founded in 1941, over the years the company has diversified into different areas such as mining, petroleum, rolling stock and petrochemicals. The company is under the direction of the Argentine Ministry of Defence."
  ARG_ypf:0 "Yacimientos Petrolíferos Fiscales"
  ARG_ypf_desc:0 "YPF S.A. (Yacimientos Petrolíferos Fiscales; English: "Fiscal Oilfields") is a vertically integrated Argentine energy company, engaged in oil and gas exploration and production, and the transportation, refining, and marketing of gas and petroleum products. In the 2020 Forbes Global 2000, YPF was ranked as the 1360th -largest public company in the world. Founded in 1922 under President Hipólito Yrigoyen's administration, YPF was the first oil company established as a state enterprise outside of the Soviet Union, and the first state oil company to become vertically integrated."
+ ARG_fapesa:0 "FAPESA"
+ ARG_UIA:0 "UIA"
+ ARG_fundiciones_santini:0 "Fundiciones Santini"
  ARG_invested_in_the_mining_industry:0 "Invested in the Mining Industry"
  ARG_inflation_1:0 "Very Minimal Inflation"
  ARG_inflation_1_desc:0 "Our Inflation has stabilized to a point where its negative effects are negligible. If we continue the way we are currently, we will be able to fully get rid of this pest that is inflation."
