--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -449,12 +449,12 @@
  URG_democratic_party_long:0 "Partido Nacional"
  URG_communism_party:0 "PCU"
  URG_communism_party_long:0 "Partido Comunista del Uruguay"
- VEN_fascism_party:0 "Consejo de Ministros"
- VEN_fascism_party_long:0 "Consejo de Ministros"
- VEN_neutrality_party:0 "AD"
- VEN_neutrality_party_long:0 "Acción Democrática"
- VEN_democratic_party:0 "Copei"
- VEN_democratic_party_long:0 "Copei"
+ VEN_neutrality_party:0 "Consejo de Ministros"
+ VEN_neutrality_party_long:0 "Consejo de Ministros"
+ VEN_fascism_party:0 "PAN"
+ VEN_fascism_party_long:0 "Partido Auténtico Nacionalista"
+ VEN_democratic_party:0 "UNE"
+ VEN_democratic_party_long:0 "Unión Nacional Estudiantil"
  VEN_communism_party:0 "PCV"
  VEN_communism_party_long:0 "Partido Comunista de Venezuela"
  PRU_fascism_party:0 "UR"
@@ -533,10 +533,16 @@
  MON_communism_party_long:0 "Mongol Ardiin Nam"
  TAN_communism_party:0 "CPSU"
  TAN_communism_party_long:0 "Communist Party of the Soviet Union"
- PAR_communism_party:0 "PRF"
- PAR_communism_party_long:0 "Partido Revolucionario Febrerista"
- CUB_democratic_party:0 "Union"
- CUB_democratic_party_long:0 "National Union"
+ PAR_communism_party:0 "UNR"
+ PAR_communism_party_long:0 "Unión Nacional Revolucionaria"
+ PAR_democratic_party:0 "PL"
+ PAR_democratic_party_long:0 "Partido Liberal"
+ PAR_neutrality_party:0 "PL"
+ PAR_neutrality_party:0 "Partido Liberal"
+ PAR_fascism_party:0 "ANR-Colorado"
+ PAR_fascism_party_long:0 "Asociación Nacional Republicana-Partido Colorado"
+ CUB_democratic_party:0 "Unión"
+ CUB_democratic_party_long:0 "Unión Nacional"
  CUB_communism_party:0 "PCC"
  CUB_communism_party_long:0 "Partido Comunista Cubano"
  CUB_fascism_party:0 "FC"
