--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -936,12 +936,12 @@
  TIB:0 "Tibet"
  TIB_DEF:0 "Tibet"
  TIB_ADJ:0 "Tibetan"
- VEN_fascism:0 "Venezuela"
- VEN_fascism_DEF:0 "Venezuela"
+ VEN_fascism:0 "Bolivarian Venezuela"
+ VEN_fascism_DEF:0 "Bolivarian Venezuela"
  VEN_democratic:0 "Federal Republic of Venezuela"
  VEN_democratic_DEF:0 "the Federal Republic of Venezuela"
- VEN_neutrality:0 "Bolivarian Venezuela"
- VEN_neutrality_DEF:0 "Bolivarian Venezuela"
+ VEN_neutrality:0 "Venezuela"
+ VEN_neutrality_DEF:0 "Venezuela"
  VEN_communism:0 "Leftist International Venezuela"
  VEN_communism_DEF:0 "Leftist International Venezuela"
  VEN_fascism_ADJ:0 "Venezuelan"
