--- a/localisation/countries_l_spanish.yml
+++ b/localisation/countries_l_spanish.yml
@@ -940,8 +940,8 @@
  VEN_fascism_DEF:0 "Venezuela"
  VEN_democratic:0 "República de Venezuela"
  VEN_democratic_DEF:0 "República de Venezuela"
- VEN_neutrality:0 "Venezuela"
- VEN_neutrality_DEF:0 "Venezuela"
+ VEN_neutrality:0 "Venezuela Bolivariana"
+ VEN_neutrality_DEF:0 "Venezuela Bolivariana"
  VEN_communism:0 "Venezuela Socialista"
  VEN_communism_DEF:0 "Venezuela Socialista"
  VEN_fascism_ADJ:0 "de Venezuela"
