--- a/localisation/ideas_l_spanish.yml
+++ b/localisation/ideas_l_spanish.yml
@@ -1613,6 +1613,9 @@
  ARG_fm_material_desc:0 "Fabricaciones Militares Sociedad del Estado es un organismo estatal argentino que depende del Ministerio de Defensa de la Nación y fue creado por la Ley N.º 12 709 del 9 de octubre de 1941. Sus propósitos principales están enfocados en abastecer de material bélico y logístico a las Fuerzas Armadas y Fuerzas de Seguridad; en organizar y producir líneas de insumos para su comercialización como productos finales o como insumos críticos destinados a diversas actividades productivas; y en prestar servicios que contribuyan al desenvolvimiento económico e industrial del país."
  ARG_ypf:0 "Yacimientos Petrolíferos Fiscales"
  ARG_ypf_desc:0 "YPF S. A. (anteriormente Yacimientos Petrolíferos Fiscales S. A.) es una empresa argentina de energía dedicada a la exploración, explotación, destilación, distribución y producción de energía eléctrica, gas, petróleo y derivados de los hidrocarburos y venta de combustibles, lubricantes, fertilizantes, plásticos y otros productos relacionados con la industria. La compañía tiene una composición societaria mixta, en la que el Estado argentino posee el 51 % de las acciones y el 49 % restante cotiza en la Bolsa de Buenos Aires y Nueva York. Fue fundada como empresa estatal en 1922, durante la presidencia de Hipólito Yrigoyen, convirtiéndose en la primera gran petrolera verticalmente integrada del mundo. Su ideólogo y primer director fue el coronel Enrique Mosconi."
+ ARG_fapesa:0 "FAPESA"
+ ARG_UIA:0 "UIA"
+ ARG_fundiciones_santini:0 "Fundiciones Santini"
  ARG_invested_in_the_mining_industry:0 "Invirtió en la Industria Mineria"
  ARG_inflation_1:0 "Inflación muy mínima"
  ARG_inflation_1_desc:0 "Nuestra Inflación se ha estabilizado hasta un punto en el que sus efectos negativos son insignificantes. Si seguimos como hasta ahora, podremos deshacernos por completo de esta plaga que es la inflación."
