--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  communist_menace:0 "Communist Menace"
  monroe_doctrine_idea:0 "The Monroe Doctrine"
  monroe_doctrine_idea_desc:0 "The Monroe Doctrine is the policy by the United States that warns European Nations to not declare war or colonize any Central or South American nations. Due to this, South and Central American nations should not join European alliances or work with Europeans, much in the same way Europeans can't exploit any Latin American nation."
@@ -2854,7 +2854,7 @@
  ARG_manuel_maria_de_iriondo:0 "Manuel Maria de Iriondo"
  ARG_manuel_antonio_fresco:0 "Manuel Antonio Fresco"
  ARG_carlos_ibarguren:0 "Carlos Ibarguren"
- ARG_enzo_bordabehere:0 "Enzo Bordabehere"
+ ARG_leopoldo_melo:0 "Leopoldo Melo"
  ARG_juan_domingo_peron:0 "Juan Domingo Peron"
  ARG_fm:0 "Dirección General de Fabricaciones Militares"
  ARG_fm_desc:0 "Fabricaciones Militares, the full name is Fabricaciones Militares Sociedad del Estado (Spanish for Military Industries State Corporation), is a state-owned Argentine arms manufacturer based in Buenos Aires. The company was a government agency under the name Dirección General de Fabricaciones Militares (Directorate General of Military Industries). Founded in 1941, over the years the company has diversified into different areas such as mining, petroleum, rolling stock and petrochemicals. The company is under the direction of the Argentine Ministry of Defence."
