--- a/localisation/state_names_l_spanish.yml
+++ b/localisation/state_names_l_spanish.yml
@@ -893,5 +893,5 @@
  STATE_892:0 "Petén"
  STATE_893:0 "Colón"
  STATE_894:0 "San Pedro Sula"
- STATE_895:0 "San Jose de David"
+ STATE_895:0 "David"
 
