--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -893,4 +893,4 @@
  STATE_892:0 "Petén"
  STATE_893:0 "Colón"
  STATE_894:0 "San Pedro Sula"
- STATE_895:0 "San Jose de David"
+ STATE_895:0 "David"
