--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1074,9 +1074,12 @@
 
  #NUEVOS VP - GUATEMALA
  VICTORY_POINTS_14549:0 "Quetzaltenango" #14549 - 313
+ VICTORY_POINTS_13085:0 "Puerto Barrios"
+ VICTORY_POINTS_4991:0 "Flores"
 
  #NUEVOS VP - HONDURAS
  VICTORY_POINTS_8017:0 "San Pedro Sula" #312
+ VICTORY_POINTS_14552:0 "Trujillo"
 
  #NUEVOS VP - NICARAGUA
  VICTORY_POINTS_14532:0 "Bluefields" #14532 - 317
